--- a/CoolBooks/CoolBooks.csproj
+++ b/CoolBooks/CoolBooks.csproj
@@ -249,6 +249,7 @@
       <DependentUpon>CoolBooks.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\BookReview.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="BookImages\1.jpeg" />
