--- a/CoolBooks/CoolBooks.csproj
+++ b/CoolBooks/CoolBooks.csproj
@@ -255,6 +255,9 @@
     <Content Include="BookImages\1.jpeg" />
     <Content Include="BookImages\2.jpg" />
     <Content Include="BookImages\3.jpg" />
+    <Content Include="Models\BookImages\1.jpeg" />
+    <Content Include="Models\BookImages\2.jpg" />
+    <Content Include="Models\BookImages\3.jpg" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
