--- a/CoolBooks/packages.config
+++ b/CoolBooks/packages.config
@@ -8,7 +8,7 @@
   <package id="Google.Apis.Auth" version="1.34.0" targetFramework="net461" />
   <package id="Google.Apis.Books.v1" version="1.34.0.1208" targetFramework="net461" />
   <package id="Google.Apis.Core" version="1.34.0" targetFramework="net461" />
-  <package id="jQuery" version="1.10.2" targetFramework="net461" />
+  <package id="jQuery" version="3.1.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
@@ -28,6 +28,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
