security check books controller reviews controller added psuedo admin page added no access page ( which is inaccessible for some reason )

--- a/CoolBooks/CoolBooks.csproj
+++ b/CoolBooks/CoolBooks.csproj
@@ -363,6 +363,8 @@
     <Content Include="Views\Search\Index.cshtml" />
     <Content Include="Views\Search\ViewAll.cshtml" />
     <Content Include="Views\Search\BookDetails.cshtml" />
+    <Content Include="Views\Home\Noaccess.cshtml" />
+    <Content Include="Views\Home\Admin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
