--- a/CoolBooks/CoolBooks.csproj
+++ b/CoolBooks/CoolBooks.csproj
@@ -363,6 +363,8 @@
     <Content Include="Views\Search\BookDetails.cshtml" />
     <Content Include="Views\Home\Noaccess.cshtml" />
     <Content Include="Views\Home\Admin.cshtml" />
+    <Content Include="Views\Reviews\Delete.cshtml" />
+    <Content Include="Views\Reviews\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
